test/Fail/Issue7033b.err
Issue7033b.agda:19.12-68: error: [UnequalTypes]
The type
  ⊤
is not a subtype of
  ⊥
when checking that the expression
transp (λ i → isC1 (transp (λ j → D tt) (~ i) c1)) i0 tt has type ⊥
